[gd_scene load_steps=4 format=3 uid="uid://kncjoqc8w2na"]

[ext_resource type="Script" path="res://scripts/click_game/draggble_object.gd" id="1_853hc"]
[ext_resource type="Texture2D" uid="uid://4eg1wx5xanr7" path="res://assets/click_game/animals/dog.png" id="2_p41g4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wx8vw"]
size = Vector2(128, 128)

[node name="DraggbleObject" type="Node2D" groups=["draggable"]]
scale = Vector2(1.25, 1.25)
script = ExtResource("1_853hc")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2.6, 2.6)
texture = ExtResource("2_p41g4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_wx8vw")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
